@@ -32,6 +32,7 @@
 				<function name="sheets"/>
 				<function name="sort"/>
 				<function name="transpose"/>
+				<function name="unique"/>
 				<function name="vlookup"/>
 			</functions>
 		</service>
