@@ -4,6 +4,7 @@ Morten:
 	* Fix touchpad scrolling on Wayland.  [#678]
 	* Fix ods auto-filter import problem.
 	* Fix xml import and export of auto-filters.
+	* New UNIQUE function.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.56
